@@ -19,10 +19,10 @@
 -->
 <chummer>
   <matrixattributes>
-    <attribute>Attack</attribute>
-    <attribute>Data Processing</attribute>
-    <attribute>Firewall</attribute>
-    <attribute>Sleaze</attribute>
+    <key>String_Attack</key>
+    <key>String_DataProcessing</key>
+    <key>String_Firewall</key>
+    <key>String_Sleaze</key>
   </matrixattributes>
   <elements>
     <element>Acid</element>
